--- a/views/backend/comment_form.html.twig
+++ b/views/backend/comment_form.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'views/layout.html.twig' %}
 {% set adminMenu = true %}
 
 {% block title %}{{ title }}{% endblock %}
