--- a/views/backend/index.html.twig
+++ b/views/backend/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "/layout.html.twig" %}
+{% extends "/views/layout.html.twig" %}
 
 
 {% block content %}
@@ -21,6 +21,6 @@
 
     </section>
 
-    <script src="http://localhost/parcour-5/web/js/menu.js"></script>
+    <script src"/js/menu.js"></script>
 
 {% endblock %}
