--- a/views/frontend/_search.html.twig
+++ b/views/frontend/_search.html.twig
@@ -1,7 +1,7 @@
 <div id="formulaire-recherche">
 
     <p class="queFaire">QUE FAIRE</p>
-    <span class="fa fa-bicycle fa-min fa-cat" title="loisirs"></span><span class="sous-cat"><a href="/liste/?cat=1" title="enfants"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-bebe.jpg"></a> <a href="/liste/?cat=2" title="toutes la famille"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-famille.jpg"></a> <a href="/liste/?cat=3" title="senior"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-ager.jpg"></a>  </span>
+    <span class="fa fa-bicycle fa-min fa-cat" title="loisirs"></span><span class="sous-cat"><a href="/liste/?cat=1" title="enfants"><img src="/images/cat-loisir-bebe.jpg" class="img-sous-menu" ></a> <a href="/liste/?cat=0" title="toutes la famille"><img class="img-sous-menu" src="/images/cat-loisir-famille.jpg"></a> <a href="/liste/?cat=2" title="senior"><img class="img-sous-menu" src="/images/cat-loisir-ager.jpg"></a>  </span>
     <i class="fa fa-map-o fa-min fa-cat" title="Plans"></i> <span class="sous-cat-plans">
         <a href="geoloc" title="Me localiser"><div class="img-sous-menu geoloc"><span class="title-cat">Me localiser</span> </div></a>
         <a href="/ville/?loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314" title="Normandie"><div class="img-sous-menu geoloc"><span class="title-cat">Normandie</span> </div></a>
