--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://localhost/parcour-5/web/css/style.css">
+    <link rel="stylesheet" href="https://www.cadito.fr/web/css/style.css">
 </head>
 
 <div id="menu-header">
@@ -68,8 +68,10 @@
 
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://localhost/parcour-5/web/js/date.js"></script>
+    <script src="https://www.cadito.fr/web/js/date.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <!-- GeoTrust QuickSSL [tm] Smart  Icon tag. Do not edit. -->
+    <script language="javascript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
+    <!-- end  GeoTrust Smart Icon tag -->
 </body>
 </html>
