--- a/web/css/style.css
+++ b/web/css/style.css
@@ -284,7 +284,7 @@ nav {
 }
 
 .geoloc {
-    background:url("http://localhost/parcour-5/web/images/00cde0651656ce487431d1f49f74b094cat-map.jpg") no-repeat;
+    background:url("https://www.cadito.fr/web/images/00cde0651656ce487431d1f49f74b094cat-map.jpg") no-repeat;
     height: 76px;
     background-size: 104px 70px;
 }
