corréction de bugs et ajout d'images par défaut

--- a/views/backend/index.html.twig
+++ b/views/backend/index.html.twig
@@ -21,6 +21,6 @@
 
     </section>
 
-    <script src"/js/menu.js"></script>
+    <script src="https://www.cadito.fr/web/js/menu.js"></script>
 
 {% endblock %}
