--- a/views/frontend/geoloc.html.twig
+++ b/views/frontend/geoloc.html.twig
@@ -8,12 +8,12 @@
         <div id="infoLoisirs">essai</div>
     </div>
 
-    <script src"https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script src"/js/ajax.js"></script>
-    <script src"/js/map.js"></script>
-    <script src"/js/menu.js"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script src="https://www.cadito.fr/web/js/ajax.js"></script>
+    <script src="https://www.cadito.fr/web/js/map.js"></script>
+    <script src="https://www.cadito.fr/web/js/menu.js"></script>
     <script type="text/javascript"
-            src"https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=map"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=map"
             async defer></script>
 
 {% endblock %}
