--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -42,7 +42,7 @@
         <div class="info-unique">
             <p>NOTE : {{ loisir.note }}/10 </p>
             <p>{{ loisir.content }}</p>
-            <p>Adresse {{ loisir.position }}</p>
+            <p class="adress">Adresse: <br />{{ loisir.position }}</p>
             <p><a href="#map"> Voire sur le plans </a></p>
 
 
