--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -12,13 +12,14 @@
                 <a class="articleTitle"
                    href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
                     <img class="liste-main" src="https://www.cadito.fr/web/images/{{ loisir.image }}">
-                    <h2><a class="loisirTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}">{{ loisir.title }}</a>
+                    <h2><a class="loisirTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">{{ loisir.title }}</a>
                         <span class="type">{{ loisir.categorie|upper }}</span></h2>
                     <p>{{ loisir.content[:178] }}... </p>
                     <div class="display">
                         <P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> {{ loisir.position }}
                         </P>
-                        <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }}</P>
+                        <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }} €</P>
+
                     </div>
                     <a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
                         <p class="reserver">Plus d'info</p></a>
