--- a/views/frontend/result.html.twig
+++ b/views/frontend/result.html.twig
@@ -7,7 +7,7 @@
 
             <div class="liste-resultat" >
                 <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}">
-                    <img class="promo-acceuil" src="https://www.cadito.fr/web/images/{{ loisirs.image }}">
+                    <img class="promo-acceuil" src="/images/{{ loisirs.image }}">
                 </a>
 
                 <P>{{ loisirs.title }} <br /> {{ loisirs.content }}</P>
@@ -33,7 +33,8 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=result"></script>
 
-    <script src="https://www.cadito.fr/web/js/ajax.js"></script>
-    <script src="https://www.cadito.fr/web/js/map-result.js?budget=20"></script>
-    <script src="https://www.cadito.fr/web/js/menu.js"></script>
+    <script src="/js/ajax.js"></script>
+    <script src="/js/map-result.js"></script>
+                 https://www.cadito.fr/web/js/map-unique.js
+    <script src="/js/menu.js"></script>
 {% endblock %}
