--- a/views/frontend/_search.html.twig
+++ b/views/frontend/_search.html.twig
@@ -1,10 +1,15 @@
 <div id="formulaire-recherche">
 
     <p class="queFaire">QUE FAIRE</p>
-    <span class="fa fa-bicycle fa-min fa-cat" title="loisirs"></span><span class="sous-cat"><a href="/liste/?cat=1" title="enfants"><img src="/images/cat-loisir-bebe.jpg" class="img-sous-menu" ></a> <a href="/liste/?cat=0" title="toutes la famille"><img class="img-sous-menu" src="/images/cat-loisir-famille.jpg"></a> <a href="/liste/?cat=2" title="senior"><img class="img-sous-menu" src="/images/cat-loisir-ager.jpg"></a>  </span>
+    <span class="fa fa-bicycle fa-min fa-cat" title="loisirs"></span>
+    <span class="sous-cat">
+        <a href="/liste/?cat=1" title="enfants"><div class="img-sous-menu-enfants" ><span class="age">Enfant</span></div></a>
+        <a href="/liste/?cat=0" title="toutes la famille"><div class="img-sous-menu-famille" ><span class="age">Toutes la famille</span></div></a>
+        <a href="/liste/?cat=2" title="senior"><div class="img-sous-menu-senior" ><span class="age">Senior</span></div></a>
+    </span>
     <i class="fa fa-map-o fa-min fa-cat" title="Plans"></i> <span class="sous-cat-plans">
         <a href="geoloc" title="Me localiser"><div class="img-sous-menu geoloc"><span class="title-cat">Me localiser</span> </div></a>
-        <a href="/ville/?loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314" title="Normandie"><div class="img-sous-menu geoloc"><span class="title-cat">Normandie</span> </div></a>
+        <a href="/ville/?loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314" title="Normandie"><div class="img-sous-menu normandie"><span class="title-cat">Normandie</span> </div></a>
     </span>
     <i class="fa fa-map-signs fa-min fa-cat" title="circuit. Voyage avec guide"></i> <i class="fa fa-cutlery fa-min fa-cat" aria-hidden="true" title="Restaurant, fast food et epiceries"></i> <i class="fa fa-bed fa-min fa-cat" aria-hidden="true" title="hôtel, gîte et camping"></i> </p>
 
