--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -44,7 +44,7 @@
             <p>{{ loisir.content }}</p>
             <p class="adress">Adresse: <br />{{ loisir.position }}</p>
             <p><a href="#map"> Voire sur le plans </a></p>
-
+            <p><A class="prix" href="{{ loisir.lien }}"> Lien du site</a></p>
 
         </div>
     </div>
