--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -11,6 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+<div class="leg"> En poursuivant votre navigation, vous acceptez l’utilisation de Cookies pour réaliser des statistiques de visites.</div>
 
 <div id="menu-header">
     <h1>
@@ -39,7 +40,6 @@
         </ul>
     </nav>
 </div>
-<body>
 
     {% block content %}{% endblock %}
 
@@ -52,6 +52,7 @@
             <p>
                 <a href="https://twitter.com/lamridjamal_off"><i class="fa fa-twitter fa-moyen white" title="Twitter"></i></a>
                 <a href="https://www.linkedin.com/in/djamal-lamri-5111a8128/"><i class="fa fa-linkedin fa-moyen white" title="LinkedIn"></i></a>
+                <a href="https://github.com/pubs1896/parcour5"><i class="fa fa-github fa-moyen white" title="LinkedIn"></i></a>
             </p>
         </div>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
