--- a/views/backend/index.html.twig
+++ b/views/backend/index.html.twig
@@ -8,7 +8,7 @@
         <div class="form-connection">
 
             Connexion à l'administration
-            <form action="../../web/index.php" method="post">
+            <form action="/" method="post">
                 <label>Pseudo:</label>
                 <input type="text" name="login" />
                 <br />
@@ -21,6 +21,6 @@
 
     </section>
 
-    <script src="https://www.cadito.fr/web/js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 
 {% endblock %}
