--- a/views/frontend/result-ville.html.twig
+++ b/views/frontend/result-ville.html.twig
@@ -7,12 +7,12 @@
 
             <div class="liste-resultat">
                 <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}">
-                    <img class="promo-acceuil" src="https://www.cadito.fr/web/images/{{ loisirs.image }}">
+                    <img class="promo-acceuil" src=/images/{{ loisirs.image }}">
                 </a>
 
                 <P>{{ loisirs.title }} <br /> {{ loisirs.content }}</P>
                 <p>Distance {{ loisirs.distance }} Mètres</p>
-                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}#map"><P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> Plans</P>
+                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}#map"><P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true">Plans</i> </P>
                     <P class="prix">{{ loisirs.prix|replace({0: "GRATUIT"}) }}</P>
                 </a>
             </div>
@@ -32,7 +32,7 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=result"></script>
 
-    <script src="https://www.cadito.fr/web/js/ajax.js"></script>
-    <script src="https://www.cadito.fr/web/js/map-ville.js?budget=20"></script>
-    <script src="https://www.cadito.fr/web/js/menu.js"></script>
+    <script src="/js/ajax.js"></script>
+    <script src="/js/map-ville.js?budget=20"></script>
+    <script src="/js/menu.js"></script>
 {% endblock %}
